--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,3 +36,36 @@
     font-size: 1.2rem;
     margin-top: 90px;
 }
+
+.services {
+    background-color: white;
+    padding: 100px 0;
+    text-align: center;
+}
+
+.services h1 {
+    font-size: 2.5rem;
+    color: black;
+    margin-bottom: 20px;
+}
+
+.services p {
+    font-size: 1.2rem;
+    color: black;
+    margin-bottom: 50px;
+}
+
+.service-item {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.service-item img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
+.service-row {
+    margin-top: 100px;
+}
