--- a/sass/style.scss
+++ b/sass/style.scss
@@ -69,3 +69,38 @@
 .service-row {
     margin-top: 100px;
 }
+
+.image-section {
+    padding: 100px 0;
+    background-color: #f9f9f9;
+    margin-top: 0;
+}
+
+.image-item {
+    margin-bottom: 30px;
+}
+
+.image-item img {
+    width: 300px;
+    height: 310px;
+    object-fit: cover;
+}
+
+.image-description {
+    background-color: #e0e0e0;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 0;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.image-title {
+    margin: 0;
+}
+
+.portfolio-header {
+    margin-top: 0;
+    margin-bottom: 50px;
+}
